<resources>
    <string name="app_name">掌上重邮</string>

    <string name="network_error">can not connect to server,check your network please!</string>
    <string name="network_conversion">An exception while (de)serializing</string>
    <string name="network_500">server error,please contact us!</string>
    <string name="network_404">not found!</string>
    <string name="network_unexpected">unknown error</string>
    <string name="network_error_default">server error unknown,please contact us!></string>

    <!-- Navigation drawer strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">登陆</string>
    <string name="title_login">登陆掌上重邮</string>
    <string name="stu_num">学号</string>
    <string name="id_num">身份证后六位</string>
    <string name="login">登陆</string>
    <string name="products">红岩网校其他产品</string>

</resources>
